
include(GenerateExportHeader)
include(MdtInstallLibrary)

add_library(Mdt_ItemModel
  Mdt/ItemModel/SortProxyModel.cpp
)

add_library(Mdt::ItemModel ALIAS Mdt_ItemModel)

generate_export_header(Mdt_ItemModel)

target_include_directories(Mdt_ItemModel
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
)

message("Test ItemModel, CMAKE_INSTALL_BINDIR: ${CMAKE_INSTALL_BINDIR} , MDT_INSTALL_INCLUDEDIR: ${MDT_INSTALL_INCLUDEDIR}")
message("Test ItemModel, PROJECT_VERSION: ${PROJECT_VERSION}")

mdt_install_library(
  TARGET Mdt_ItemModel
  RUNTIME_DESTINATION ${CMAKE_INSTALL_BINDIR}
  LIBRARY_DESTINATION ${CMAKE_INSTALL_LIBDIR}
  ARCHIVE_DESTINATION ${CMAKE_INSTALL_LIBDIR}
  INCLUDES_DIRECTORY .
  INCLUDES_FILE_WITHOUT_EXTENSION
  ADDITIONAL_INCLUDES_FILES "${CMAKE_CURRENT_BINARY_DIR}/mdt_itemmodel_export.h"
  INCLUDES_DESTINATION ${MDT_INSTALL_INCLUDEDIR}
  EXPORT_NAME ItemModel
  EXPORT_NAMESPACE Mdt0::
  INSTALL_NAMESPACE ${MDT_INSTALL_PACKAGE_NAME}
  FIND_PACKAGE_PATHS ..
  INSTALL_IS_UNIX_SYSTEM_WIDE ${MDT_INSTALL_IS_UNIX_SYSTEM_WIDE}
  VERSION ${PROJECT_VERSION}
  SOVERSION ${PROJECT_VERSION_MAJOR}
  VERSION_COMPATIBILITY ExactVersion
  RUNTIME_COMPONENT Mdt_ItemModel_Runtime
  DEVELOPMENT_COMPONENT Mdt_ItemModel_Dev
)
